# Utilities

./: .gitignore  CMakeLists.txt  README.md
C/Memory_Management/Debugger/: debugger.h
Templates/Make/: makefile
Templates/docs/: README.md  SUMMARY.md  _sidebar.md  _sidebar.md~  buffer.md  changelog.md  community.md  compliance.md  contributing.md  debugging.md  glossary-technical.md  glossary.md  index.md  keyboard-shortcuts.md  licenses.md  references.md  requirements.md  security-review.md  security.md  setup-guide.md  stack.md  stack.md~  support.md  testing.md  threat-model.md  todo.md  usage.md  versioning.md
Templates/docs/api/: README.md  api-design.md  authentication.md  endpionts.md  error-handling.md  example-requests.md  openapi.yaml  rate-limiting.md  request-format.md  response-format.md
Templates/docs/compliance/: README.md  gdpr.md
Templates/docs/database/: README.md  data-governance.md  er-diagram.md  indexes.md  migrations.md  schema.md  seeding.md
Templates/docs/design-assets/: #branding.md#  README.md  README.md~
Templates/docs/dev-notes/: README.md  anti-patterns.md  architecture-insights.md  cache-strategy.md  code-snippets.md  data-flow.md  general-tips.md  performace.md  tools-setup.md  troubleshooting.md
Templates/docs/feat/: README.md  feature.md
Templates/docs/infra/: .#load-balancer-config.md  README.md  ci-cd.md  cloud.md  deployment-guide.md  disaster-recovery.md  infra-example.md  (+6 more)
Templates/make/: README.md  kr.clang-format  kr.editorconfig  linux.clang-format  linux.editorconfig  makefile
Templates/readme/: template.md
(+63 files in other folders)
